[package]
name = "yugioh-card-entry"
version = "0.1.0"
authors = ["Christopher Wells <cwellsny@nycap.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9"
glib = "0.10"
gtk = "0.9"

[[bin]]
name = "yugioh-card-entry"
path = "src/main.rs"
