[package]
name = "yugioh-card-entry"
version = "0.1.0"
authors = ["Christopher Wells <cwellsny@nycap.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
gdk-pixbuf = "0.9"
gio = "0.9"
glib = "0.10"
gtk = "0.9"
home = "0.5.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2"

[[bin]]
name = "yugioh-card-entry"
path = "src/main.rs"
